--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "description",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": ["storage", "commands", "activeTab", "scripting", "contextMenus", "tabs"],
+  "permissions": ["storage", "commands", "activeTab", "scripting", "contextMenus", "tabs", "topSites"],
   "background": {
     "service_worker": "background.js"    
   },
